# Forge-Finance

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COMPONENT_REGISTRY.md  CONTRACT.md  COSTS.md  DECISIONS.md  DESIGN_SYSTEM.md  ERRORS.md  FRONTEND_SPEC.md  INFRASTRUCTURE.md  MEMORY_CORRECTIONS.md  MEMORY_EPISODIC.md  MEMORY_SEMANTIC.md  MOCKUPS.md  PATTERNS.md  PERFORMANCE.md  PLANS.md  README.md  RESEARCH.md  SECURITY.md  SPEC.md  TECH_STACK.md  TESTS.md  TIMELOG.md  VERSION_ROADMAP.md  package.json  pnpm-lock.yaml  render.yaml
apps/api/: .env.example  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_create_all_tables.py  002_stripe_customer_id_index.py
apps/api/app/: main.py
apps/api/app/core/: auth.py  config.py  database.py
apps/api/app/models/: __init__.py  account.py  agent_log.py  base.py  budget.py  category.py  conversation.py  goal.py  sync_log.py  transaction.py  user.py
apps/api/app/routers/: alerts.py  billing.py  budgets.py  dashboard.py  goals.py  investments.py  net_worth.py  oracle.py  plaid.py  reports.py  settings.py  transactions.py
apps/api/app/schemas/: __init__.py  account.py  budget.py  goal.py  transaction.py  user.py
apps/api/tests/: conftest.py  test_2fa.py  test_accessibility.py  test_alerts.py  test_auth.py  test_billing.py  test_budgets.py  test_dashboard.py  test_goals.py  test_health.py  test_investments.py  test_models.py  test_net_worth.py  test_oracle.py  test_oracle_agent.py  test_plaid.py  test_reports.py  test_schemas.py  test_sync.py  test_transactions.py
(+77 files in other folders)
